--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,30 @@
 <% include partials/header %>
-<h1>INDEX PAGE</h1>
-
-<% blogs.forEach(function(blogs){ %>
-    <div>
-        <h2><%= blogs.title %></h2>
-        <img src="<%= blogs.image %>">
-        <span><%= blogs.created %></span>
+<div class="ui main text container">
+    <div class="ui huge header">RESTful Blog App</div>
+    <div class="ui top attached segment">
+        <div class="ui divided items">
+            <% blogs.forEach(function(blogs){ %>
+                <div class="item">
+                    <div class="image">
+                        <img src="<%= blogs.image %>">
+                    </div> 
+                    <div class="content">
+                        <a class="header" href="/blogs/<%= blogs._id %>"><%= blogs.title %></a>
+                        <div class="meta">
+                                <span><%= blogs.created.toDateString() %></span>
+                        </div>
+                        <div class="description">
+                                <p><%- blogs.body.substring(0, 100) %>...</p>
+                        </div>
+                        <div class="extra">
+                                <a class="ui floated basic violet button" href="/blogs/<%= blogs._id %>">
+                                    Read More
+                                </a>
+                        </div>
+                    </div>
+                </div>
+            <% }) %>
+        </div>
     </div>
-<% }) %>
-
+</div>
 <% include partials/footer %>
